# financnidlo

./: .gitignore  CMakeLists.txt  ITERS.md  Makefile  README.md  iterator.h  main.cpp  model.h  parser.h  types.h
src/: balancer.h  iterator.h  main.cpp  model.h  parser.h  people.h  simplifier.h  types.h
tests/: main.cpp  test_iterator.h  test_parser.h
tests/inputs/: 01.txt  generate.py
